--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule "@primary/swarm"]
 	path = @primary/swarm
 	url = https://github.com/hmmhmmhm/swarm.git
+[submodule "private_mds"]
+	path = private_mds
+	url = https://github.com/hmmhmmhm/private_mds
